Lagt til ikke-blokkerende kall mot BRREGSTUB