@@ -1,11 +1,9 @@
 package no.nav.dolly.bestilling.brregstub.util;
 
-import static java.util.Objects.isNull;
-
-import java.util.stream.Collectors;
-
 import lombok.experimental.UtilityClass;
 import no.nav.dolly.bestilling.brregstub.domain.RolleoversiktTo;
+
+import static java.util.Objects.isNull;
 
 @UtilityClass
 public class BrregstubMergeUtil {
@@ -18,11 +16,11 @@ public class BrregstubMergeUtil {
 
         nyRolleovesikt.getUnderstatuser().addAll(eksisterendeRoller.getUnderstatuser().stream()
                 .filter(understatus -> nyRolleovesikt.getUnderstatuser().stream().noneMatch(understatus::equals))
-                .collect(Collectors.toList()));
+                .toList());
 
         nyRolleovesikt.getEnheter().addAll(eksisterendeRoller.getEnheter().stream()
                 .filter(enhet -> nyRolleovesikt.getEnheter().stream().noneMatch(enhet::equals))
-                .collect(Collectors.toList()));
+                .toList());
 
         return nyRolleovesikt;
     }
